src/test/deca/context/invalid/class/surcharge/return_other.deca
// Description:
//    Héritage d'une classe
//
// Resultats:
//    Wrong return type

class A {
	int m() {}
}

class B extends A {
	boolean m() {}
}

{

}

